<resources>
    <string name="app_name">Example Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="example_of_email">example@email.com</string>
    <string name="destacados">Destacados</string>
    <string name="busqueda">Búsqueda</string>
    <string name="mis_cursos">Mis cursos</string>
    <string name="cuenta">Cuenta</string>
    <string name="acerca_de">Acerca de</string>
    <string name="version">Versión</string>
    <string name="desarrolladores">Desarrolladores</string>
    <string name="configuracion">Configuración</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bienvenido">Bienvenido</string>
</resources>
